--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="pairing_parent_1">1. Push the button above to scan your child\'s QR code.</string>
     <string name="pairing_parent_2">2. Now push the button above to display your QR code.</string>
 
+    <string name="scanQR_canceled">Scanning was canceled by user. Please push the button above to scan the partner\'s code again.</string>
+    <string name="pairing_success">Congratulations! Pairing successfully done.</string>
 </resources>
