--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="emailpassword_status_fmt">Email User: %s</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
     <string name="loading">Loading…</string>
+    <string name="required">Required</string>
 
     <string name="welcome">Welcome to the My Child Tracker App!</string>
     <string name="welcome_home">Choose what you want to do...</string>
@@ -41,8 +42,10 @@
 
     <string name="empty_list">Your list is empty</string>
 
+    <string name="parent">Parent</string>
+    <string name="child">Child</string>
     <string name="log_out_question">Are you sure you want to log out?</string>
-    <string name="child_or_parent">Are you a parent?</string>
+    <string name="parent_or_child">Are you a parent or child?</string>
     <string name="title_activity_navigation">NavigationActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
@@ -59,4 +62,5 @@
 
     <string name="scanQR_canceled">Scanning was canceled by user. Please push the button above to scan the partner\'s code again.</string>
     <string name="pairing_success">Congratulations! Pairing successfully done.</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
