interval set but permission to db denied

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="notification_text">Tracking, tap to cancel</string>
     <string name="transport_id" translatable="false">123</string>
     <string name="firebase_path" translatable="false">locations</string>
-    <string name="firebase_email" translatable="false">carlijn@test.nl</string>
-    <string name="firebase_password" translatable="false">123456</string>
     <string name="app_name">Secure Child Tracker</string>
 
     <string name="hint_user_id">User ID</string>
@@ -20,7 +18,7 @@
     <string name="loading">Loading…</string>
     <string name="required">Required</string>
 
-    <string name="welcome">Welcome to the My Child Tracker App!</string>
+    <string name="welcome">Welcome to the your Secure Child Tracker App!</string>
     <string name="welcome_home">Choose what you want to do...</string>
     <string name="pick_username">Pick a username</string>
     <string name="username">Username</string>
